Refactoring and docs updates
Signed-off-by: Jared Hocutt <jhocutt@redhat.com>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,8 +1,7 @@
 ---
-
-franz_version: latest
-
-franz_archive_filename: franz-{{ franz_version | regex_replace('^v', '') }}.tar.gz
+# defaults file for franz
 
 franz_install_dir: /opt/franz
 franz_download_dir: "{{ franz_install_dir }}/{{ franz_archive_filename | regex_replace('.tar.gz$', '') }}"
+
+franz_archive_filename: franz-{{ franz_version | regex_replace('^v', '') }}.tar.gz
