--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,14 +1,25 @@
 galaxy_info:
   role_name: franz
-  author: Jared Hocutt
-  description: Installs Franz.
 
-  license: BSD
+  author: Jared Hocutt (@jaredhocutt)
+  description: >-
+    This role handles installing Franz from a release archive.
 
-  min_ansible_version: 2.6
+  license: MIT
+
+  # Reason: unarchive module
+  min_ansible_version: 1.4
 
   platforms:
   - name: Fedora
     versions:
-    - 27
-    - 28
+    - all
+
+  galaxy_tags:
+    - vscode
+    - code
+    - visualstudio
+    - editor
+    - text
+
+dependencies: []
