Update galaxy tags
Signed-off-by: Jared Hocutt <jhocutt@redhat.com>

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -16,10 +16,8 @@ galaxy_info:
     - all
 
   galaxy_tags:
-    - vscode
-    - code
-    - visualstudio
-    - editor
-    - text
+    - franz
+    - chat
+    - communication
 
 dependencies: []
